# Turing-Machine-Tutor

./: .gitignore  a^n,b^n.txt  class_diagram.drawio  desktop.ini  exe_diagram.drawio  manage.py  package.json  pnpm-lock.yaml  requirements.txt  setup.cfg  setup.py  tsconfig.json  turing_machine_test_turoiral_1.txt
Backend/: Backend.sln
docs/: domain.md  (+1 more)
src/: setup.cfg
src/app/: MyForm.tsx  page.tsx
src/tests/: CombinedTuringMachine_Tests.py  IFTuringMachine_Tests.py  Machine_Run_State_Tests.py  TuringMachineController_Tests.py  TuringMachine_Tests.py  Visualizer_Tests.py  unit_test.py
src/tests/examples/: test_intentional_bug.py
src/turing_machine_tutor/: Call_Turing_Machine.py  Challenge.py  CombinedTuringMachine.py  ConcatenateTM.py  IFTuringMachine.py  MultiNext.py  MultiTapeTuringMachine.py  Next.py  TuringMachine.py  TuringMachineController.py  TuringMachineVisualizer.py  WhileTuringMachine.py  __init__.py  __main__.py  call_turing_machine.py  configuration.py  diagram.py  domain.py  machine_run_state.py  next.py  other_file.py  sandbox.py  serialization.py  test_main.py  transition_table.py  turing_machine.py  turing_machine_builder.py  turing_machine_run.py
src/turing_machine_tutor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/turing_machine_tutor/examples/: anagram.py  example.py  intentional_bug.py  leap_years.py
src/turing_machine_tutor/radwan/: CombinedTuringMachine.py  TuringMachine.py  TuringMachineVisualizer.py  main.py  pyvenv.cfg
src/turing_machine_tutor/util/: FrozenDict.py  input_validation.py  mutate_tuple.py
(+90 files in other folders)
