[metadata]
name = TuringMachineLib
description = Turing machine library
author = Group13
license = BGU
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers = 
        Programming Language :: Python :: 3

[options]
package = 
    TuringMachineLib
python_requires = >=3.0
package_dir = 
    =src
zip_safe = no